# preemptirq-benchmark

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/preemptirq_benchmark/: __main__.py  codegen.py  compare.py  formatters.py  perf_stat.py  report.py  stats.py  types.py
src/preemptirq_benchmark/benchmarks/: __init__.py  bpf_bench.py  cyclictest.py  fio.py  hackbench.py  iperf3_bench.py  kernel_compile.py  perf_bench.py  rtla.py  stress_ng.py  tracerbench.py
tests/: test_benchmarks_init.py  test_compare.py  test_formatters.py  test_main.py  test_report.py  test_stats.py
